[package]
name = "vorbisfile-sys"
version = "0.0.5"
description = "FFI for the vorbisfile library"
license = "MIT"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
links = "vorbisfile"
build = "libvorbisfile/build.rs"

[build-dependencies]
gcc = "*"
pkg-config = "*"

[dependencies]
libc = "*"
ogg-sys = "*"
vorbis-sys = "*"
